--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 .ipynb_checkpoints/*
-.idead/*
+.idea/*
 # C extensions
 *.so
 
+.DS_Store
 # Distribution / packaging
 .Python
 build/
